# loaderstub

./: .gitignore  CMakeLists.txt
source/: main.cc  modloader.cc
stub/: x86_64-windows.S
tools/: bin2h.cc  stub-host.cc  target.cc
